--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,9 @@ jobs:
       run: npm install
     - name: build
       run: npm run make
+    - name : upload apk
+      uses: actions/upload-artifact@master
+      if: always()
+      with:
+          name: gg
+          path: ${{ github.workspace }}/app/build/release
