--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
     - name: build
       run: npm run make
     - name : upload apk
-      uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@v3
       if: always()
       with:
           name: gg
-          path: ${{ github.workspace }}
+          path: dist/
